@@ -1,3 +1,7 @@
+2007-05-11  Calvin Gaisford <calvinrg@gmail.com> 
+
+	* Banter/Person.cs: moved some comments
+
 2007-05-11  Brady Anderson <banderso@novell.com> 
 
 	* Banter/Account.cs: updated presence
